--- a/src/style.css
+++ b/src/style.css
@@ -857,6 +857,24 @@ width: 10px;
     padding: 1rem;
 }
 
+
+.linkProject {
+    font-family: 'Spectral', serif;
+    text-decoration: none;
+    padding: 0.2rem;
+    border: 2px solid black;
+    box-shadow: -5px 5px 1px black;
+    color: black;
+    background-color: white;
+}
+
+.linkProject:hover {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    padding: 0.2rem;
+}
+
 .negative {
     backdrop-filter: invert(100%);
     color: white;
