--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 }
 
 *::selection {
-    background-color: red;
+    background-color: transparent;
 }
 
 html, body {
@@ -318,7 +318,7 @@ html, body {
             display: flex;
             justify-content: center;
             align-items: center;
-            text-shadow: 0px 0px 1px black, 0px -0px 1px black, -0px -0px 1px black, -0px 0px 1px black;
+            text-shadow: 2px 2px 2px black, 2px -2px 2px black, -2px -2px 2px black, -2px 2px 2px black;
         }
         
         .scrollMainText {
