--- a/src/style.css
+++ b/src/style.css
@@ -270,7 +270,7 @@ html, body {
             font-size: 1rem;
         }
         .navTabs {
-            font-size: 0.5rem;
+            font-size: 0.3rem;
             padding-left: 0.5rem;
             padding-right: 0.5rem;
             padding-top: 0.5rem;
@@ -936,6 +936,10 @@ width: 10px;
 
 .Oi {
     font-family: 'Oi', cursive;
+}
+
+.seeThrough {
+    filter: opacity(50%);
 }
 
 /* Loading Page */
